--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
 
-          <a href="#modal" class="hero-btn"
+          <a href="#modal" class="open-modal"
             ><button type="button" class="hero-btn">Order Service</button></a
           >
         </div>
@@ -486,13 +486,12 @@
         </div>
       </footer>
     </main>
-
     <!-- Добавляем модальное окно -->
     <div id="modal" class="backdrop">
       <div class="modal">
         <a href="#" class="modal-close">
           <div class="close-circle">
-            <svg class="icon" viewBox="0 0 24 24">
+            <svg class="icon" width="8" height="8">
               <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
             </svg>
           </div>
@@ -501,66 +500,81 @@
           Leave your contacts and we will call you back
         </h2>
         <form class="contact-form">
-          <label for="name" class="input-label">Name</label>
-          <div class="input-container">
-            <svg class="icon">
-              <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
-            </svg>
-            <input
-              type="text"
-              id="name"
-              name="name"
-              placeholder="Your name"
-              required
-            />
+          <div class="input-group">
+            <label for="user-name">Name</label>
+            <div class="input-container">
+              <svg class="icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+              <input
+                type="text"
+                id="user-name"
+                name="user-name"
+                placeholder="Your name"
+                required
+              />
+            </div>
           </div>
-
-          <label for="phone" class="input-label">Phone</label>
-          <div class="input-container">
-            <svg class="icon">
-              <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
-            </svg>
-            <input
-              type="tel"
-              id="phone"
-              name="phone"
-              placeholder="Your phone"
-              required
-            />
+          <div class="input-group">
+            <label for="user-phone">Phone</label>
+            <div class="input-container">
+              <svg class="icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+              <input
+                type="tel"
+                id="user-phone"
+                name="user-phone"
+                placeholder="Your phone"
+                required
+              />
+            </div>
           </div>
-
-          <label for="email" class="input-label">Email</label>
-          <div class="input-container">
-            <svg class="icon">
-              <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
-            </svg>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Your email"
-              required
-            />
+          <div class="input-group">
+            <label for="user-email">Email</label>
+            <div class="input-container">
+              <svg class="icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
+              <input
+                type="email"
+                id="user-email"
+                name="user-email"
+                placeholder="Your email"
+                required
+              />
+            </div>
           </div>
-
-          <label for="comment" class="input-label">Comment</label>
-          <div class="textarea-container">
-            <textarea
-              id="comment"
-              name="comment"
-              placeholder="Text input"
-              required
-            ></textarea>
+          <div class="input-group">
+            <label for="user-comment">Comment</label>
+            <div class="textarea-container">
+              <textarea
+                id="user-comment"
+                name="user-comment"
+                placeholder="Text input"
+                required
+              ></textarea>
+            </div>
           </div>
-
           <div class="checkbox-container">
-            <input type="checkbox" id="terms" required />
-            <label for="terms"
-              >I accept the terms and conditions of the
-              <a href="#">Privacy Policy</a></label
-            >
+            <input
+              type="checkbox"
+              id="user-privacy"
+              name="user-privacy"
+              value="true"
+              class="visually-hidden"
+              required
+            />
+            <label for="user-privacy">
+              <span class="checkbox-custom">
+                <svg class="icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="#">Privacy Policy</a>
+            </label>
           </div>
-
           <button type="submit" class="send-btn">Send</button>
         </form>
       </div>
