--- a/index.html
+++ b/index.html
@@ -469,12 +469,15 @@
           <div class="footer-subscribe">
             <p class="subscribe-title">Subscribe</p>
             <form class="subscribe-form">
-              <input
-                type="email"
-                class="subscribe-input"
-                placeholder="E-mail"
-                required
-              />
+              <label class="subscribe-label">
+                <input
+                  type="email"
+                  name="email"
+                  class="subscribe-input"
+                  placeholder="E-mail"
+                  required
+                />
+              </label>
               <button type="submit" class="subscribe-btn">
                 Subscribe
                 <svg class="icon" width="24" height="24">
@@ -485,99 +488,100 @@
           </div>
         </div>
       </footer>
-    </main>
-    <!-- Добавляем модальное окно -->
-    <div id="modal" class="backdrop">
-      <div class="modal">
-        <a href="#" class="modal-close">
-          <div class="close-circle">
-            <svg class="icon" width="8" height="8">
-              <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
-            </svg>
-          </div>
-        </a>
-        <h2 class="modal-title">
-          Leave your contacts and we will call you back
-        </h2>
-        <form class="contact-form">
-          <div class="input-group">
-            <label for="user-name">Name</label>
-            <div class="input-container">
-              <svg class="icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+
+      <!-- Добавляем модальное окно -->
+      <div id="modal" class="backdrop">
+        <div class="modal">
+          <a href="#" class="modal-close">
+            <div class="close-circle">
+              <svg class="icon" width="8" height="8">
+                <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
               </svg>
-              <input
-                type="text"
-                id="user-name"
-                name="user-name"
-                placeholder="Your name"
-                required
-              />
             </div>
-          </div>
-          <div class="input-group">
-            <label for="user-phone">Phone</label>
-            <div class="input-container">
-              <svg class="icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
-              </svg>
-              <input
-                type="tel"
-                id="user-phone"
-                name="user-phone"
-                placeholder="Your phone"
-                required
-              />
-            </div>
-          </div>
-          <div class="input-group">
-            <label for="user-email">Email</label>
-            <div class="input-container">
-              <svg class="icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
-              </svg>
-              <input
-                type="email"
-                id="user-email"
-                name="user-email"
-                placeholder="Your email"
-                required
-              />
-            </div>
-          </div>
-          <div class="input-group">
-            <label for="user-comment">Comment</label>
-            <div class="textarea-container">
-              <textarea
-                id="user-comment"
-                name="user-comment"
-                placeholder="Text input"
-                required
-              ></textarea>
-            </div>
-          </div>
-          <div class="checkbox-container">
-            <input
-              type="checkbox"
-              id="user-privacy"
-              name="user-privacy"
-              value="true"
-              class="visually-hidden"
-              required
-            />
-            <label for="user-privacy">
-              <span class="checkbox-custom">
-                <svg class="icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-check"></use>
+          </a>
+          <h2 class="modal-title">
+            Leave your contacts and we will call you back
+          </h2>
+          <form class="contact-form">
+            <div class="input-group">
+              <label for="user-name">Name</label>
+              <div class="input-container">
+                <svg class="icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
                 </svg>
-              </span>
-              I accept the terms and conditions of the
-              <a href="#">Privacy Policy</a>
-            </label>
-          </div>
-          <button type="submit" class="send-btn">Send</button>
-        </form>
+                <input
+                  type="text"
+                  id="user-name"
+                  name="user-name"
+                  placeholder="Your name"
+                  required
+                />
+              </div>
+            </div>
+            <div class="input-group">
+              <label for="user-phone">Phone</label>
+              <div class="input-container">
+                <svg class="icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+                </svg>
+                <input
+                  type="tel"
+                  id="user-phone"
+                  name="user-phone"
+                  placeholder="Your phone"
+                  required
+                />
+              </div>
+            </div>
+            <div class="input-group">
+              <label for="user-email">Email</label>
+              <div class="input-container">
+                <svg class="icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+                </svg>
+                <input
+                  type="email"
+                  id="user-email"
+                  name="user-email"
+                  placeholder="Your email"
+                  required
+                />
+              </div>
+            </div>
+            <div class="input-group">
+              <label for="user-comment">Comment</label>
+              <div class="textarea-container">
+                <textarea
+                  id="user-comment"
+                  name="user-comment"
+                  placeholder="Text input"
+                  required
+                ></textarea>
+              </div>
+            </div>
+            <div class="checkbox-container">
+              <input
+                type="checkbox"
+                id="user-privacy"
+                name="user-privacy"
+                value="true"
+                class="visually-hidden"
+                required
+              />
+              <label for="user-privacy">
+                <span class="checkbox-custom">
+                  <svg class="icon" width="10" height="8">
+                    <use href="./images/icons.svg#icon-check"></use>
+                  </svg>
+                </span>
+                I accept the terms and conditions of the
+                <a href="#">Privacy Policy</a>
+              </label>
+            </div>
+            <button type="submit" class="send-btn">Send</button>
+          </form>
+        </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
