--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
       </footer>
     </main>
     <!-- Добавляем модальное окно -->
-    <div class="modal-container">
+    <div class="container">
       <div id="modal" class="backdrop">
         <div class="modal">
           <button type="button" class="modal-close">
