--- a/index.html
+++ b/index.html
@@ -420,174 +420,157 @@
           </ul>
         </div>
       </section>
-
-      <!--Footer section-->
-      <footer class="footer">
-        <div class="container footer-container">
-          <div class="footer-left">
-            <a href="./index.html" class="logo"
-              >WEB<span class="web">STUDIO</span></a
-            >
-            <p class="footer-text">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </div>
-          <div class="footer-icons">
-            <p class="social-title">Social media</p>
-            <ul class="social-list">
-              <li class="footer-social">
-                <a href="#" class="footer-social-icon">
-                  <svg class="icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram-2"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-social">
-                <a href="#" class="footer-social-icon">
-                  <svg class="icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-social">
-                <a href="#" class="footer-social-icon">
-                  <svg class="icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-social">
-                <a href="#" class="footer-social-icon">
-                  <svg class="icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin-1"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer-subscribe">
-            <p class="subscribe-title">Subscribe</p>
-            <form class="subscribe-form">
-              <label class="subscribe-label">
-                <input
-                  type="email"
-                  name="email"
-                  class="subscribe-input"
-                  placeholder="E-mail"
-                  required
-                />
-              </label>
-              <button type="submit" class="subscribe-btn">
-                Subscribe
-                <svg class="icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-icon-send"></use>
-                </svg>
-              </button>
-            </form>
-          </div>
+    </main>
+    <!--Footer section-->
+    <footer class="footer">
+      <div class="container footer-container">
+        <div class="footer-left">
+          <a href="./index.html" class="logo"
+            >WEB<span class="web">STUDIO</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
         </div>
-      </footer>
-
-      <!-- Добавляем модальное окно -->
-      <div class="container">
-        <div id="modal" class="backdrop">
-          <div class="modal">
-            <button type="button" class="modal-close">
-              <svg class="icon" width="8" height="8">
-                <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+        <div class="footer-icons">
+          <p class="social-title">Social media</p>
+          <ul class="social-list">
+            <li class="footer-social">
+              <a href="#" class="footer-social-icon">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social">
+              <a href="#" class="footer-social-icon">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social">
+              <a href="#" class="footer-social-icon">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social">
+              <a href="#" class="footer-social-icon">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-subscribe">
+          <p class="subscribe-title">Subscribe</p>
+          <form class="subscribe-form">
+            <label class="subscribe-label">
+              <input
+                type="email"
+                name="email"
+                class="subscribe-input"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+            <button type="submit" class="subscribe-btn">
+              Subscribe
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
-            <h2 class="modal-title">
-              Leave your contacts and we will call you back
-            </h2>
-            <form class="contact-form">
-              <div class="input-group">
-                <label for="user-name">Name</label>
-                <div class="input-container">
-                  <svg class="icon" width="18" height="24">
-                    <use
-                      href="./images/icons.svg#icon-person-black-18dp-1"
-                    ></use>
-                  </svg>
-                  <input
-                    type="text"
-                    id="user-name"
-                    name="user-name"
-                    placeholder="Your name"
-                    required
-                  />
-                </div>
-              </div>
-              <div class="input-group">
-                <label for="user-phone">Phone</label>
-                <div class="input-container">
-                  <svg class="icon" width="18" height="24">
-                    <use
-                      href="./images/icons.svg#icon-phone-black-18dp-1"
-                    ></use>
-                  </svg>
-                  <input
-                    type="tel"
-                    id="user-phone"
-                    name="user-phone"
-                    placeholder="Your phone"
-                    required
-                  />
-                </div>
-              </div>
-              <div class="input-group">
-                <label for="user-email">Email</label>
-                <div class="input-container">
-                  <svg class="icon" width="18" height="24">
-                    <use
-                      href="./images/icons.svg#icon-email-black-18dp-1"
-                    ></use>
-                  </svg>
-                  <input
-                    type="email"
-                    id="user-email"
-                    name="user-email"
-                    placeholder="Your email"
-                    required
-                  />
-                </div>
-              </div>
-              <div class="input-group">
-                <label for="user-comment">Comment</label>
-                <div class="textarea-container">
-                  <textarea
-                    id="user-comment"
-                    name="user-comment"
-                    placeholder="Text input"
-                    required
-                  ></textarea>
-                </div>
-              </div>
-              <div class="checkbox-container">
-                <input
-                  type="checkbox"
-                  id="user-privacy"
-                  name="user-privacy"
-                  value="true"
-                  class="visually-hidden"
-                  required
-                />
-                <label for="user-privacy">
-                  <span class="checkbox-custom">
-                    <svg class="icon" width="10" height="8">
-                      <use href="./images/icons.svg#icon-check"></use>
-                    </svg>
-                  </span>
-                  I accept the terms and conditions of the
-                  <a href="#">Privacy Policy</a>
-                </label>
-              </div>
-              <button type="submit" class="send-btn">Send</button>
-            </form>
-          </div>
+          </form>
         </div>
       </div>
-    </main>
+    </footer>
+
+    <!-- Добавляем модальное окно -->
+    <div id="modal" class="overlay-container">
+      <div class="popup-box">
+        <a href="#" class="close-popup">
+          <svg width="8" height="8" class="close-icon">
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+          </svg>
+        </a>
+        <p class="popup-text">Leave your contacts and we will call you back</p>
+        <form>
+          <div class="input-container">
+            <label for="user-name" class="input-label">Name</label>
+            <div class="input-wrapper">
+              <input
+                type="text"
+                name="user-name"
+                id="user-name"
+                class="input-field"
+              />
+              <svg width="18" height="24" class="input-icon">
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="input-container">
+            <label for="user-phone" class="input-label">Phone</label>
+            <div class="input-wrapper">
+              <input
+                type="tel"
+                name="user-phone"
+                id="user-phone"
+                class="input-field"
+              />
+              <svg width="18" height="24" class="input-icon">
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="input-container">
+            <label for="user-email" class="input-label">Email</label>
+            <div class="input-wrapper">
+              <input
+                type="email"
+                name="user-email"
+                id="user-email"
+                class="input-field"
+              />
+              <svg width="18" height="24" class="input-icon">
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="comment-container">
+            <label for="user-comment" class="input-label">Comment</label>
+            <textarea
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+              class="textarea-box"
+            ></textarea>
+          </div>
+          <div class="checkbox-wrapper">
+            <input
+              type="checkbox"
+              class="hidden-checkbox"
+              id="user-privacy"
+              name="user-privacy"
+              value="true"
+            />
+            <label for="user-privacy" class="privacy-label">
+              <span class="checkbox-custom">
+                <svg width="10" height="8">
+                  <use href="./images/icons.svg#icon-Checkbox"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="#" class="policy-link">Privacy Policy</a>
+            </label>
+          </div>
+          <button type="button" class="submit-button">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
