--- a/index.html
+++ b/index.html
@@ -492,11 +492,11 @@
     <!-- Добавляем модальное окно -->
     <div id="modal" class="overlay-container">
       <div class="popup-box">
-        <a href="#" class="close-popup">
-          <svg width="8" height="8" class="close-icon">
+        <button type="button" class="close-popup">
+          <svg width="8" height="8" class="svg-icon-modal">
             <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
-        </a>
+        </button>
         <p class="popup-text">Leave your contacts and we will call you back</p>
         <form>
           <div class="input-container">
