--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
           <div class="checkbox-wrapper">
             <input
               type="checkbox"
-              class="hidden-checkbox"
+              class="vissualy-hiden"
               id="user-privacy"
               name="user-privacy"
               value="true"
