--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
 
-          <a href="#modal" class="open-modal"
-            ><button type="button" class="hero-btn">Order Service</button></a
-          >
+          <button type="button" class="hero-btn">Order Service</button>
         </div>
       </section>
 
