--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
       </div>
     </footer>
 
-    <!-- Добавляем модальное окно -->
+    <!-- Modal -->
     <div id="modal" class="overlay-container">
       <div class="popup-box">
         <button type="button" class="close-popup">
@@ -551,7 +551,7 @@
           <div class="checkbox-wrapper">
             <input
               type="checkbox"
-              class="vissualy-hiden"
+              class="visualy-hidden"
               id="user-privacy"
               name="user-privacy"
               value="true"
