--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
           <div class="checkbox-wrapper">
             <input
               type="checkbox"
-              class="visualy-hidden"
+              class="visually-hidden"
               id="user-privacy"
               name="user-privacy"
               value="true"
